--- a/index.html
+++ b/index.html
@@ -67,21 +67,27 @@
                     <div class="card-header bg-dark">
                         <h4 class="display-4 text-center text-light">Perfil</h4>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-
+                   <div class="card-body">
+                    <div class="row pt-4">
+                        <div class="col-sm-12 col-md-4">
+                            <div id="image-box-perfil">
+                                <img src="./assets/img/perfil.jpeg" alt="">
+                                <h3 class="text-center">Luis Mario Benitez Dominguez</h3>
+                            </div>
                         </div>
                         <div class="col-md-6">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum totam perferendis enim est
-                                consequatur cum aspernatur ducimus delectus tempore. Corrupti libero rerum nam assumenda
-                                excepturi voluptatibus aliquam laudantium itaque ex!</p>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum totam perferendis enim est
-                                consequatur cum aspernatur ducimus delectus tempore. Corrupti libero rerum nam assumenda
-                                excepturi voluptatibus aliquam laudantium itaque ex!
-                            </p>
+                            <div class="text-center pt-4">
+                                <p>Mi nombre es luis mario benitez dominguez, soy estudiante de ingenieria de software en la Universidad Catolica de El Salvador</p>
+                                <p>
+                                    Me apasiona la tecnologia, el mundo de la programación, de resolver problemas usando la tecnologia para facilitarle la vida a las empresas
+                                </p>
+                                <p>
+                                    Grado academico: Estudiante de Ongeniería de Desarrollo de Software
+                                </p>
+                            </div>
                         </div>
                     </div>
+                   </div>
                 </div>
             </div>
 
