--- a/index.html
+++ b/index.html
@@ -89,6 +89,39 @@
                     </div>
                    </div>
                 </div>
+
+                <table class="table">
+                    <thead class="bg-dark text-white"> 
+                      <tr>
+                        <th scope="col" colspan="4">Datos Personales</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">Grado Academico</th>
+                        <td>Estudiante de Ongeniería de Desarrollo de Software</td>
+                      </tr>
+                      <tr>
+                          <th scope="row">Profesion</th>
+                          <td>Estudiante</td>
+                      </tr>
+                      <tr>
+                          <th scope="row">Universidad</th>
+                          <td>Universidad Catolica de El Salvador</td>
+                      </tr>
+                      <tr>
+                          <th>Objetivos</th>
+                          <td>
+                              <ul>
+                                  <li>Identificar, formular y resolver problemas de ingeniería mediante software informático.</li>
+                                  <li>Realizar análisis de negocio para el levantamiento de requerimientos y la toma de decisiones, haciendo uso de herramientas de modelado de software.</li>
+                              </ul>
+                          </td>
+                      </tr>
+                       
+                    </tbody>
+                  </table>
+
             </div>
 
         </div>
