--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 </head>
 
 <body>
@@ -56,6 +57,9 @@
                 </div>
             </div>
 
+            <br><br><br>
+            <hr>
+            <br><br><br>
 
             <div id="Introduccion">
                 <br><br>
@@ -159,8 +163,22 @@
                             <td class="text-left">Universidad Catolica de El Salvador</td>
                         </tr>
                         <tr>
-                            <th scope="row">Universidad</th>
-                            <td>Universidad Catolica de El Salvador</td>
+                            <th scope="row">Quienes somos</th>
+                            <td>
+                                <p>
+                                    La Universidad Católica de El Salvador forma profesionales íntegros, con consciente
+                                    posesión de conocimientos y estatura moral, que les impulse a servir con honestidad
+                                    y eficacia al país y a sus semejantes.
+                                </p>
+                                <p>
+                                    La filosofía de la UNICAES está definida con la frase latina de nuestro emblema:
+                                    LITTERAE SINE MORIBUS VANAE (La Ciencias sin Moral es Vana). La erudición sin ética
+                                    carece de adecuado fundamento. Fundada el 13 de abril de 1982, tiene su sede
+                                    principal en la ciudad de Santa Ana, donde radica la Rectoría y las oficinas
+                                    administrativas. Cuenta con una Facultad Multidisciplinaria en el Municipio de
+                                    Ilobasco, Cabañas.
+                                </p>
+                            </td>
                         </tr>
 
                     </tbody>
@@ -176,6 +194,14 @@
                         <tr>
                             <th scope="row">Carrera</th>
                             <td>Ingeniería en Desarrollo de Software</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Año</th>
+                            <td>2022</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Ciclo</th>
+                            <td>I 2022</td>
                         </tr>
                         <tr>
                             <th>Objetivos</th>
@@ -254,140 +280,192 @@
             </div>
             <br><br><br>
             <hr>
-            <br><br><br>
+            <br><br>
             <div id="Portafolio">
                 <br><br>
                 <div class="card-header bg-dark">
                     <h4 class="display-4 text-center text-light">Portafolio</h4>
                 </div>
-                <div class="pt-4">
+
+
+                <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./assets/img/carousel/proyect1.png"
+                                class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5 class="text-dark display-4">Parcial I</h5>
+                                <p>
+                                    <a href="./portafolio/Parcial2dpw/2018BD601.html" class="">Visitar</a>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions"
+                        data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only dark-dark text-dark">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions"
+                        data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </button>
+                </div>
+                <!-- <div class="pt-4">
                     <div class="row">
-                        <div class="col-12 col-sm-12 col-md-4">
-                            <div class="card" style="width: 100%; height: 50vh;">
-                                <img src="https://downloadfreecourse.com/uploads/images/2021/06/webp/image_750x_60bc98672266d.webp"
-                                    class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">JavaScript-full curso desde principiante hasta profesional
-                                    </h5>
-                                    <p class="lead">
-                                        Grover Vásquez
-                                    </p>
+                        <div class="col-12 col-sm-12 col-md-12">
+                            <div class="card">
+                                <div class="row">
+                                    <div class="col col-md-4">
+                                        <img src="https://downloadfreecourse.com/uploads/images/2021/06/webp/image_750x_60bc98672266d.webp"
+                                            class="card-img-top" alt="...">
+                                    </div>
+                                    <div class="col col-md-6">
+                                        <div class="card-body">
+                                            <h5 class="card-title">
+                                                Pagina de pasteles
+                                            </h5>
+                                            <p class="lead">
+                                                <a href="">Ver proyecto</a>
+                                            </p>
 
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-12 col-md-4">
-                            <div class="card" style="width: 100%; height: 50vh;">
-                                <img src="https://downloadfreecourse.com/uploads/images/2021/06/webp/image_750x_60bc98672266d.webp"
-                                    class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Aprende a programar con GO</h5>
-                                    <p class="lead">
-                                        Grover Vásquez
-                                    </p>
 
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-12 col-md-4">
-                            <div class="card" style="width: 100%; height: 50vh;">
-                                <img src="https://downloadfreecourse.com/uploads/images/2021/06/webp/image_750x_60bc98672266d.webp"
-                                    class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Python desde cero</h5>
-                                    <p class="lead">
-                                        Grover Vásquez
-                                    </p>
+                    </div>
+                </div> -->
 
-                                </div>
-                            </div>
+                <!-- fin container  -->
+            </div>
+            <hr>
+
+
+            <br><br><br>
+            <hr>
+            <br><br><br>
+            <div class="row">
+                <div class="col col-md-12">
+                    <div class="card shadow-lg" id="Contacto">
+                        <br><br>
+                        <div class="card-header  bg-dark">
+                            <h4 class="display-4 text-center text-light">
+                                Contacto
+                            </h4>
                         </div>
+                        <div class="card-body">
+                            <form class="needs-validation" novalidate>
+                                <div class="form-group">
+                                    <label for="validationCustom01">Correo</label>
+                                    <input type="email" class="form-control" id="validationCustom01" value="Mark"
+                                        required>
+                                    <div class="invalid-feedback">
+                                        Escribe correo
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleFormControlTextarea1">Mensaje</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                        required></textarea>
+                                    <div class="invalid-feedback">
+                                        Escribe mensaje
+                                    </div>
+                                </div>
+
+
+                                <div class="form-group text-center">
+                                    <button class="btn btn-dark" type="submit">Enviar</button>
+                                </div>
+                            </form>
+
+                            <script>
+                                // Example starter JavaScript for disabling form submissions if there are invalid fields
+                                (function () {
+                                    'use strict';
+                                    window.addEventListener('load', function () {
+                                        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+                                        var forms = document.getElementsByClassName('needs-validation');
+                                        // Loop over them and prevent submission
+                                        var validation = Array.prototype.filter.call(forms, function (
+                                            form) {
+                                            form.addEventListener('submit', function (event) {
+                                                if (form.checkValidity() === false) {
+                                                    event.preventDefault();
+                                                    event.stopPropagation();
+                                                }
+                                                form.classList.add('was-validated');
+                                            }, false);
+                                        });
+                                    }, false);
+                                })();
+                            </script>
+                        </div>
+
                     </div>
                 </div>
-
             </div>
-
-            <!-- fin container  -->
         </div>
+
+        <br><br>
         <hr>
-
-
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <div class="row">
-            <div class="col col-md-6">
-                <div class="card" id="Contacto">
-                    <br><br>
-                    <div class="card-header  bg-dark">
-                        <h4 class="display-4 text-center text-light">
-                            Contacto
-                        </h4>
+        <br><br>
+        <div class="container-fluid bg-dark">
+            <footer class="contenedor">
+                <div class="redes-sociales">
+                    <div class="contenedor-icono">
+                        <a href="http://www.twitter.com" target="_blank" class="twitter">
+                            <i class="fab fa-twitter"></i>
+                        </a>
                     </div>
-                    <div class="card-body">
-                        <form class="needs-validation" novalidate>
-                            <div class="form-group">
-                                <label for="validationCustom01">Correo</label>
-                                <input type="email" class="form-control" id="validationCustom01" value="Mark" required>
-                                <div class="invalid-feedback">
-                                    Escribe correo
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Mensaje</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                                    required></textarea>
-                                <div class="invalid-feedback">
-                                    Escribe mensaje
-                                </div>
-                            </div>
-
-
-                            <div class="form-group text-center">
-                                <button class="btn btn-dark" type="submit">Enviar</button>
-                            </div>
-                        </form>
-
-                        <script>
-                            // Example starter JavaScript for disabling form submissions if there are invalid fields
-                            (function () {
-                                'use strict';
-                                window.addEventListener('load', function () {
-                                    // Fetch all the forms we want to apply custom Bootstrap validation styles to
-                                    var forms = document.getElementsByClassName('needs-validation');
-                                    // Loop over them and prevent submission
-                                    var validation = Array.prototype.filter.call(forms, function (form) {
-                                        form.addEventListener('submit', function (event) {
-                                            if (form.checkValidity() === false) {
-                                                event.preventDefault();
-                                                event.stopPropagation();
-                                            }
-                                            form.classList.add('was-validated');
-                                        }, false);
-                                    });
-                                }, false);
-                            })();
-                        </script>
+                    <div class="contenedor-icono">
+                        <a href="https://www.facebook.com/luisd98" target="_blank" class="facebook">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
                     </div>
-
+                    <div class="contenedor-icono">
+                        <a href="https://www.instagram.com/luisbenitez4_/" target="_blank" class="instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
                 </div>
+            </footer>
+            <div class="footer-copyright text-center py-3 text-muted">© 2020 Copyright:
+                <a href="#" class="text-light"> Jorge Gp</a>
             </div>
         </div>
-    </div>
-
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
-        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
-    </script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+            integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
